2010-02-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added more tests.
	* test/BitfieldManTest.cc

2010-02-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added BitfieldMan::getFirstNMissingUnusedIndex() to get multiple
	unused block indexes at once instead of calling
	getFirstMissingUnusedIndex() multiple times. Made use of it in
	Piece class and DefaultBtRequestFactory class via Piece class.
	* src/BitfieldMan.cc
	* src/BitfieldMan.h
	* src/DefaultBtRequestFactory.cc
	* src/Piece.cc
	* src/Piece.h
	* test/BitfieldManTest.cc

2010-02-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use std::make_pair(...)
	* src/DHTMessageTracker.cc

2010-02-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use std::make_pair(...)
	* src/bittorrent_helper.cc

2010-02-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	urlencode(removeFragment(...)) in parseUrl(...)
	* src/Request.cc

2010-02-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Wrapped logger->debug(...) with if(logger->debug()) { ... }
	* src/AbstractCommand.cc
	* src/AdaptiveURISelector.cc
	* src/BtPieceMessage.cc
	* src/BtPortMessage.cc
	* src/CreateRequestCommand.cc
	* src/DHTAbstractNodeLookupTask.cc
	* src/DHTBucket.cc
	* src/DHTGetPeersCommand.cc
	* src/DHTMessageDispatcherImpl.cc
	* src/DHTMessageFactoryImpl.cc
	* src/DHTMessageTracker.cc
	* src/DHTPeerAnnounceStorage.cc
	* src/DHTRoutingTable.cc
	* src/DHTSetup.cc
	* src/DefaultBtAnnounce.cc
	* src/DefaultBtInteractive.cc
	* src/DefaultBtMessageDispatcher.cc
	* src/DefaultBtMessageReceiver.cc
	* src/DefaultBtProgressInfoFile.cc
	* src/DefaultBtRequestFactory.cc
	* src/DefaultPeerStorage.cc
	* src/DefaultPieceStorage.cc
	* src/DownloadCommand.cc
	* src/DownloadEngine.cc
	* src/EpollEventPoll.cc
	* src/FileAllocationCommand.cc
	* src/FileEntry.cc
	* src/FtpNegotiationCommand.cc
	* src/HandshakeExtensionMessage.cc
	* src/HttpListenCommand.cc
	* src/HttpServer.cc